--- a/lego.html
+++ b/lego.html
@@ -106,6 +106,11 @@
 						</div>
 						<div class="item">
 							<div class="animate-box">
+								<a href="images/lego/DSC_1682.jpg" class="image-popup fh5co-board-img"><img src="images/lego/thumbs/DSC_1682.webp" alt=""></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="animate-box">
 								<a href="images/lego/DSC_0063.jpg" class="image-popup fh5co-board-img"><img src="images/lego/thumbs/DSC_0063.webp" alt=""></a>
 							</div>
 						</div>
